// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for June's track destination action: all fields 1`] = `
Object {
  "anonymousId": "(Z)g#uwBR$^wR6&",
  "context": Object {
    "testType": "(Z)g#uwBR$^wR6&",
  },
  "event": "(Z)g#uwBR$^wR6&",
  "messageId": "(Z)g#uwBR$^wR6&",
  "properties": Object {
    "testType": "(Z)g#uwBR$^wR6&",
  },
  "timestamp": Any<String>,
  "userId": "(Z)g#uwBR$^wR6&",
}
`;

exports[`Testing snapshot for June's track destination action: required fields 1`] = `
Object {
  "event": "(Z)g#uwBR$^wR6&",
  "messageId": "(Z)g#uwBR$^wR6&",
  "timestamp": Any<String>,
}
`;
